--- a/SportsStore/package.json
+++ b/SportsStore/package.json
@@ -10,6 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^4.1.3",
-    "fontawesome": "4.7.0"
+    "fontawesome": "4.7.0",
+    "jquery": "3.2.1",
+    "jquery-validation": "1.17.0",
+    "jquery-validation-unobtrusive": "3.2.6"
   }
 }
