Chapter 11: Administration - complete

--- a/SportsStore/appsettings.json
+++ b/SportsStore/appsettings.json
@@ -2,6 +2,10 @@
   "Data": {
     "SportStoreProducts": {
       "ConnectionString": "Server=.\\SQLEXPRESS;Database=SportsStore;Trusted_Connection=True;MultipleActiveResultSets=true"
+    },
+    "SportStoreIdentity": {
+      "ConnectionString": "\" Server=(localdb)\\\\MSSQLLocalDB;Database=Identity;Trusted_",
+      "Connection=True;MultipleActiveResultSets=true\""
     }
   }
 }
