--- a/SportsStore/appsettings.json
+++ b/SportsStore/appsettings.json
@@ -4,8 +4,7 @@
       "ConnectionString": "Server=.\\SQLEXPRESS;Database=SportsStore;Trusted_Connection=True;MultipleActiveResultSets=true"
     },
     "SportStoreIdentity": {
-      "ConnectionString": "\" Server=(localdb)\\\\MSSQLLocalDB;Database=Identity;Trusted_",
-      "Connection=True;MultipleActiveResultSets=true\""
+      "ConnectionString": "Server=.\\SQLEXPRESS;Database=Identity;Trusted_Connection=True;MultipleActiveResultSets=true"
     }
   }
 }
